--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
+    "intl": "^1.2.5",
+    "ion2-calendar": "^2.0.10",
     "ionic-angular": "3.7.1",
+    "ionic2-calendar": "^0.3.10",
     "ionicons": "3.0.0",
+    "moment": "^2.19.1",
     "ng2-datepicker": "^2.1.2",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
